bat.bool1.nearhundred.NearHundred.scala.error
Erreur de compilation :
NearHundred:3: error: value and is not a member of Boolean
    case n if 111>n and n>89 => return true
                    ^NearHundred:4: error: value and is not a member of Boolean
    case n if 211>n and n>189 => return true
                    ^