bat.bool1.nearhundred.NearHundred.scala.code
def nearHundred(n:Int): Boolean = {
  n match {
    case n if 111>n and n>89 => return true
    case n if 211>n and n>189 => return true
    case n => return false
  }
}